--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   spark-master:
-    image: docker.io/bitnami/spark:3.5.6
+    image: docker.io/bitnami/spark:4.0.0
     container_name: spark-master
     user: root
     environment:
@@ -9,7 +9,7 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_USER=root
+      - SPARK_USER=spark
       - RUNNING_IN_CLUSTER=true
     ports:
       - '8080:8080'
@@ -18,7 +18,7 @@ services:
       - ./spark-apps:/opt/spark-apps
       - ${DATA_DIR}:/opt/spark-data
   spark-worker:
-    image: docker.io/bitnami/spark:3.5.6
+    image: docker.io/bitnami/spark:4.0.0
     user: root
     environment:
       - SPARK_MODE=worker
@@ -29,7 +29,7 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_USER=root
+      - SPARK_USER=spark
       - RUNNING_IN_CLUSTER=true
     volumes:
       - ./spark-apps:/opt/spark-apps
